Fix up for latest Clutter deprecations

https://bugzilla.gnome.org/show_bug.cgi?id=678917