src/meta/meta-window-actor.h
@@ -46,12 +46,12 @@ typedef struct _MetaWindowActorPrivate MetaWindowActorPrivate;
 
 struct _MetaWindowActorClass
 {
-  ClutterGroupClass parent_class;
+  ClutterActorClass parent_class;
 };
 
 struct _MetaWindowActor
 {
-  ClutterGroup           parent;
+  ClutterActor           parent;
 
   MetaWindowActorPrivate *priv;
 };
